--- a/README
+++ b/README
@@ -10,3 +10,5 @@ Full-featured,
 - Colorful animated wood engine.
 - 50 levels in this first version
 - 3 beautiful musics and many sound effects.
+
+This version updates the version to the SDL2 and updates the code to build and run on Android too.
