update NEWS to create a new version

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+11-11-2023 : Version 3.0.0
+           Update to SDL2
+           Compilation ok on Android
 01-11-2007 : Version 2.0.1
 	   New Korean language.
 	   Russian correction language.
