--- a/README
+++ b/README
@@ -1,7 +1,9 @@
-Ri-li is a arcade game licensed under the GPL (General Public License).
+Li-Ri is a fork of Ri-li (http://www.ri-li.org).
+
+Li-Ri is a arcade game licensed under the GPL (General Public License).
 You drive a toy wood engine in many levels and you must collect
 all the coaches for win.You can dowload it and play indefinitely.
-It's Free. You can play on 'Windows', 'Linux', 'Mac OsX', 'AmigaOS4'.
+It's Free. You can play on 'Windows', 'Linux', 'Mac OsX', 'Android'.
 
 Full-featured,
 - 19 languages: Arabic, Breton, Chinese, English, Esperanto, French,
