--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ Li-Ri Game
 Official site : http://github.com/petitlapin/Li-Ri
 
 Copyright (c) 2023
-Johnny Jazeix <jazeix@gmail.com>: port to SDL2 + android
+Johnny Jazeix <jazeix@gmail.com>: port to SDL2 + android + cmake
 
 Copyright (c) 2006
 Dominique Roux-Serret: roux-serret@ifrance.com : design & programming & graphics & website.
