--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-xx-01-2024 : Version 3.1.0
+01-01-2024 : Version 3.1.0
            Fix crash on highscore when waiting too much (memory corruption)
            Add IME keyboard on Android
            Handle Back button on Android (same as Escape)
