iconv -f ISO-8859-1 -t UTF-8 AUTHORS
Fixes: #35

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,9 +14,9 @@ Christian H. and Adrian F. for the German correction.
 N. Y. for the Japanese corrections.
 David R. and David B.M. for the Spanish corrections.
 K. TONNELLE "http://ktonnelle.free.fr" for the Breton translation.
-V. Búr for the Esperanto translation.
+V. BÃºr for the Esperanto translation.
 J. JORGE for the Portuguese translation.
-V. Búr for the Slovak translation.
+V. BÃºr for the Slovak translation.
 T. Gustavsson for the Swedish transltation.
 L. Serafinowski for the Polish translation.
 R. Claudio, Bao for Italian corrections.
