add releasing section in documentation

--- a/INSTALL
+++ b/INSTALL
@@ -33,3 +33,9 @@ To create a package, use the *package* target from cmake invocation: `cmake --bu
 * on Linux, it will create a self extractible tgz file. You can execute it and install it. Then, you can run `bin/Li-ri` from this folder to run Li-Ri.
 * on macOS, it will generate a .dmg (that has not been tested at all so it may not run at all).
 * on Windows, a NSIS installer (you need to install NSIS on your computer to generate it).
+
+
+Releasing:
+==========
+Update NEWS.yaml to add a new version and the changelog.
+Then, run `./tools/create_release.sh -v 3.1.5` to update all the files necesary for the release.
