update changelog for 3.1.6

--- a/INSTALL
+++ b/INSTALL
@@ -38,4 +38,4 @@ To create a package, use the *package* target from cmake invocation: `cmake --bu
 Releasing:
 ==========
 Update NEWS.yaml to add a new version and the changelog.
-Then, run `./tools/create_release.sh -v 3.1.5` to update all the files necesary for the release.
+Then, run `./tools/create_release.sh -v 3.1.5` to update all the files necessary for the release.
